--- a/.htaccess
+++ b/.htaccess
@@ -1,5 +1,6 @@
 RewriteEngine on
 RewriteRule ^p/([0-9]+)$  link.php?id=$1  [L]
-RewriteRule ^u/([^/.]+)$  index.php?user=$1  [L]
-RewriteRule ^t/([^/.]+)$  index.php?tag=$1  [L]
+RewriteRule ^([^/.]+)$  index.php?search=$1  [L]
+RewriteRule ^u/([^/.]+)$  index.php?search=~$1  [L]
+RewriteRule ^t/([^/.]+)$  index.php?search=*+in+$1  [L]
 RewriteRule ^c/([^/.]+)$  comments.php?user=$1  [L]
